force-app/main/default/objects/MentorSkills__c/MentorSkills__c.object-meta.xml
<CustomObject>
    <label>Mentor Skills</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Mentor Skills</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentor Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>