force-app/main/default/objects/MentorSkills__c/fields/Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Rating__c</fullName>
    <label>Average Rating</label>
    <summarizedField>Mentorship__c.Mentor_Skill_Rating__c</summarizedField>
    <summaryForeignKey>Mentorship__c.Mentor_Skills__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>