force-app/main/default/objects/MentorSkills__c/fields/Count_of_ratings__c.field-meta.xml
<CustomField>
    <fullName>Count_of_ratings__c</fullName>
    <label>Count of ratings</label>
    <summaryForeignKey>Mentorship__c.Mentor_Skills__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>