force-app/main/default/objects/MentorSkills__c/fields/MentorId__c.field-meta.xml
<CustomField>
    <fullName>MentorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MentorId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mentor Skills</relationshipLabel>
    <relationshipName>Mentor_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>