force-app/main/default/objects/MentorSkills__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill3__c</referenceTo>
    <relationshipLabel>Mentor Skills</relationshipLabel>
    <relationshipName>Mentor_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>